# langchain-rag

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning_intro.txt  python_intro.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
